--- a/css/styleSimon.css
+++ b/css/styleSimon.css
@@ -2,10 +2,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   h1 {
     text-align: center;
+    font-size: 60px;
   }
   
   #scoreboard {
@@ -44,7 +46,7 @@ body {
   }
   
   .pressed {
-    opacity: 0.5;
+    opacity: 0.2;
   }
   
   #start {
